First commited as before_61878_rev1