@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2006 IBM Corporation and others.
+ * Copyright (c) 2005, 2014 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,6 +8,7 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *     Brad Reynolds (bug 146435)
+ *     Jeanderson Candido <http://jeandersonbc.github.io> - Bug 444070
  *******************************************************************************/
 package org.eclipse.ui.tests.harness.util;
 
@@ -15,14 +16,13 @@ import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
 
 import junit.framework.AssertionFailedError;
 
 /**
  * Utility class for creating mock objects for public interfaces.
- * 
+ *
  * @since 3.3
  *
  */
@@ -33,12 +33,14 @@ public class Mocks {
 	}
 
 	private static EqualityComparator defaultEqualityComparator = new EqualityComparator() {
+		@Override
 		public boolean equals(Object o1, Object o2) {
 			return o1 == null ? o2 == null : o1.equals(o2);
 		}
 	};
 
 	private static EqualityComparator indifferentEqualityComparator = new EqualityComparator() {
+		@Override
 		public boolean equals(Object o1, Object o2) {
 			return true;
 		}
@@ -78,6 +80,7 @@ public class Mocks {
 				this.args = args;
 			}
 
+			@Override
 			public boolean equals(Object obj) {
 				if (!(obj instanceof MethodCall)) {
 					return false;
@@ -106,15 +109,16 @@ public class Mocks {
 			public Object getReturnValue() {
 				return returnValue;
 			}
-			
+
+			@Override
 			public String toString() {
 				return method.toString();
 			}
 		}
 
-		List previousCallHistory = null;
+		List<MethodCall> previousCallHistory = null;
 
-		List currentCallHistory = new ArrayList();
+		List<MethodCall> currentCallHistory = new ArrayList<MethodCall>();
 
 		private final boolean ordered;
 
@@ -126,13 +130,14 @@ public class Mocks {
 			this.equalityComparator = equalityComparator;
 		}
 
+		@Override
 		public Object invoke(Object proxy, Method method, Object[] args)
 				throws Throwable {
 			if (getMockInvocationHandlerMethod.equals(method)) {
 				return this;
 			}
 			if (equalsMethod.equals(method)) {
-				return new Boolean(proxy == args[0]);
+				return Boolean.valueOf(proxy == args[0]);
 			}
 			MethodCall methodCall = new MethodCall(method, args);
 			if (previousCallHistory != null) {
@@ -140,8 +145,8 @@ public class Mocks {
 				int indexOfMethodCall = previousCallHistory.indexOf(methodCall);
 				if (indexOfMethodCall != -1) {
 					// copy return value over to this method call
-					methodCall.setReturnValue(((MethodCall) previousCallHistory
-							.get(indexOfMethodCall)).getReturnValue());
+					methodCall.setReturnValue(previousCallHistory
+							.get(indexOfMethodCall).getReturnValue());
 				} else {
 					throw new AssertionFailedError("unexpected method call: "
 							+ method.getName());
@@ -151,7 +156,7 @@ public class Mocks {
 						throw new AssertionFailedError("extra method call: "
 								+ method.getName());
 					}
-					MethodCall previousCall = (MethodCall) previousCallHistory
+					MethodCall previousCall = previousCallHistory
 							.get(currentCallHistory.size());
 					if (!methodCall.equals(previousCall)) {
 						throw new AssertionFailedError(
@@ -162,7 +167,7 @@ public class Mocks {
 				}
 			}
 			currentCallHistory.add(methodCall);
-			Class returnType = method.getReturnType();
+			Class<?> returnType = method.getReturnType();
 			if (returnType.isPrimitive() && void.class != returnType) {
 				Object result = null;
 				Object returnValue = methodCall.getReturnValue();
@@ -200,7 +205,7 @@ public class Mocks {
 
 		public void replay() {
 			previousCallHistory = currentCallHistory;
-			currentCallHistory = new ArrayList();
+			currentCallHistory = new ArrayList<MethodCall>();
 		}
 
 		public void verify() {
@@ -227,8 +232,7 @@ public class Mocks {
 					}
 				}
 			} else {
-				for (Iterator it = previousCallHistory.iterator(); it.hasNext();) {
-					MethodCall methodCall = (MethodCall) it.next();
+				for (MethodCall methodCall : previousCallHistory) {
 					if (!currentCallHistory.contains(methodCall)) {
 						throw new AssertionFailedError("missing method call:"
 								+ methodCall.method.getName());
@@ -240,11 +244,11 @@ public class Mocks {
 
 		public void reset() {
 			previousCallHistory = null;
-			currentCallHistory = new ArrayList();
+			currentCallHistory = new ArrayList<MethodCall>();
 		}
 
 		public void setLastReturnValue(Object object) {
-			MethodCall methodCall = (MethodCall) currentCallHistory
+			MethodCall methodCall = currentCallHistory
 					.get(currentCallHistory.size() - 1);
 			methodCall.setReturnValue(object);
 		}
@@ -253,51 +257,51 @@ public class Mocks {
 	/**
 	 * Creates a mock object that neither looks at the order of method calls nor
 	 * at the arguments.
-	 * 
+	 *
 	 * @param interfaceType
 	 * @return a mock object that checks for the order of method invocations but
 	 *         not for equality of method arguments
 	 */
-	public static Object createRelaxedMock(Class interfaceType) {
+	public static <T> Object createRelaxedMock(Class<T> interfaceType) {
 		return createMock(interfaceType, false, indifferentEqualityComparator);
 	}
 
 	/**
 	 * Creates a mock object that does not look at the arguments, but checks
 	 * that the order of calls is as expected.
-	 * 
+	 *
 	 * @param interfaceType
 	 * @return a mock object that checks for the order of method invocations but
 	 *         not for equality of method arguments
 	 */
-	public static Object createOrderedMock(Class interfaceType) {
+	public static <T> Object createOrderedMock(Class<T> interfaceType) {
 		return createMock(interfaceType, true, indifferentEqualityComparator);
 	}
 
 	/**
 	 * creates a fussy mock object
-	 * 
+	 *
 	 * @param interfaceType
 	 * @return a mock object that checks for the order of method invocations and
 	 *         for equality of method arguments
 	 */
-	public static Object createMock(Class interfaceType) {
+	public static <T> Object createMock(Class<T> interfaceType) {
 		return createMock(interfaceType, true, defaultEqualityComparator);
 	}
 
 	/**
 	 * creates a fussy mock object with a comparator
-	 * 
+	 *
 	 * @param interfaceType
 	 * @return a mock object that checks for the order of method invocations and
 	 *         uses the given comparator to compare method arguments
 	 */
-	public static Object createMock(Class interfaceType,
+	public static <T> Object createMock(Class<T> interfaceType,
 			EqualityComparator equalityComparator) {
 		return createMock(interfaceType, true, equalityComparator);
 	}
 
-	private static Object createMock(Class interfaceType, boolean ordered,
+	private static <T> Object createMock(Class<T> interfaceType, boolean ordered,
 			EqualityComparator equalityComparator) {
 		if (!interfaceType.isInterface()) {
 			throw new IllegalArgumentException();
